--- a/Index.html
+++ b/Index.html
@@ -1,27 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My First Web Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f5f5f5;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #555;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Village - Home</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Welcome to MANA KOVVALI</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#events">Events</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <h1>Welcome to My Website</h1>
-    <p>This is a basic HTML page.</p>
+  <section id="hero">
+    <h2>Experience the Beauty of Our Village</h2>
+    <p>Rich culture, friendly people, and beautiful landscapes.</p>
+  </section>
 
+  <section id="about">
+    <h2>About Our Village</h2>
+    <p>
+      Our village is located in the heart of the countryside. It is known for its lush green fields, traditional festivals, and warm hospitality. With a history dating back several centuries, we take pride in preserving our cultural heritage while embracing progress.
+    </p>
+  </section>
+
+  <section id="events">
+    <h2>Upcoming Events</h2>
+    <ul class="event-list">
+      <li>
+        <strong>Harvest Festival</strong> – September 10, 2025<br>
+        A day full of music, food, and traditional performances.
+      </li>
+      <li>
+        <strong>Clean Village Drive</strong> – August 20, 2025<br>
+        Join hands with locals for a cleaner environment.
+      </li>
+      <li>
+        <strong>Village Sports Day</strong> – October 5, 2025<br>
+        Traditional games, races, and fun for all ages!
+      </li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Village Office: VRO OFFICE MAIN ROAD KOVVALI DENDULURU(MD) ELURU(DST) ANDHARA PRADESH (ST) INDIA PINCODE:534442 <br>
+    Phone: +91-9999999999<br>
+    Email: manakovvali@gmail.com</p>
+	
+     <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
+      View Our Village on Google Maps
+    </a>
+  </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 My Village. All rights reserved.</p>
+  </footer>
 </body>
 </html>
