--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </section>
 
   <section id="contact">
-    <h2>Contact Us</h2>
+    <h2>Contact Us:</h2>
     <p>Village Office: VRO OFFICE MAIN ROAD KOVVALI DENDULURU(MD) ELURU(DST) ANDHARA PRADESH (ST) INDIA PINCODE:534442 <br>
     Phone: +91-9999999999<br>
     Email: manakovvali@gmail.com</p>
