--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Village - Home</title>
+  <title>ManaKovvali</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to MANA KOVVALI</h1>
+    <h1>Welcome to Mana Kovvali</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#events">Events</a>
@@ -35,25 +35,17 @@
         <strong>Harvest Festival</strong> – September 10, 2025<br>
         A day full of music, food, and traditional performances.
       </li>
-      <li>
-        <strong>Clean Village Drive</strong> – August 20, 2025<br>
-        Join hands with locals for a cleaner environment.
-      </li>
-      <li>
-        <strong>Village Sports Day</strong> – October 5, 2025<br>
-        Traditional games, races, and fun for all ages!
-      </li>
     </ul>
   </section>
 
   <section id="contact">
     <h2>Contact Us:</h2>
-    <p>Village Office: VRO OFFICE MAIN ROAD KOVVALI DENDULURU(MD) ELURU(DST) ANDHARA PRADESH (ST) INDIA PINCODE:534442 <br>
+    <p>Village Office: VRO Office Main Road Kovvali Denduluru(MD) Eluru(DST) Andhra Pradesh(ST) India Pincode:534442 <br>
     Phone: +91-8688493236<br>
     Email: manakovvali@gmail.com</p>
 	
      <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
-      View Our Village on Google Maps
+      View Village on Google Maps
     </a>
   </p>
   </section>
