--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
     </a>
   </p>
   </section>
+<section style="background-color: #fdf6f0; padding: 40px; border-radius: 10px; max-width: 700px; margin: 0 auto; font-family: 'Segoe UI', sans-serif; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+    <h2 style="color: #cc4e00; text-align: center;">My Heartfelt Note</h2>
+    <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center; padding: 0 20px;">
+        “This website is born from love — a small gift to the village that shaped who I am. 
+        With the little knowledge and experience I’ve gathered, I hope to preserve our roots, 
+        connect our people, and help our community grow stronger, together. 
+        <strong>This is for Kovvali — my home, my pride.</strong>”
+    </p>
+</section>
+
 
   <footer>
     <p>&copy; 2025 My Village. All rights reserved.</p>
