--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
   <footer>
-    <p>&copy; 2025 My Village. All rights reserved.</p>
+    <p>&copy; 2025 Mana Kovvali. All rights reserved.</p>
   </footer>
   <script>
   const menuToggle = document.getElementById('menu-toggle');
