--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
   <footer>
     <p>&copy; 2025 Mana Kovvali. All rights reserved.</p>
-  </footer>
+<img src="https://visitor-badge.laobi.icu/badge?page_id=manoj7573.manakovvali" alt="visitors">
+    </footer>
   <script>
   const menuToggle = document.getElementById('menu-toggle');
   const navbar = document.getElementById('navbar');
