--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
      <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
       View Village on Google Maps
     </a>
+	  <a href="https://https://www.facebook.com/people/Kovvali-Village/100064362655112/?sk" target="_blank">
+          </a>
   </p>
   </section>
 <section style="background-color: #fdf6f0; padding: 40px; border-radius: 10px; max-width: 700px; margin: 0 auto; font-family: 'Segoe UI', sans-serif; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
