--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
       View Village on Google Maps
     </a>
-	  <a href="https://https://www.facebook.com/people/Kovvali-Village/100064362655112/"target="_blank">
+	  <a href="https://www.facebook.com/people/Kovvali-Village/100064362655112/"target="_blank">
       social media FACEBOOK 
 	  </a>
   </p>
