--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
      <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
       View Village on Google Maps
     </a>
-	  <a href="https://www.facebook.com/people/Kovvali-Village/100064362655112/"target="_blank">
-      social media FACEBOOK 
+
+	  social media 
+	  
+	FACEBOOK,insta,x,youtube
+	  <a href="https://www.facebook.com/profile.php?id=100064362655112"target="_blank">
+       
 	  </a>
   </p>
   </section>
