--- a/index.html
+++ b/index.html
@@ -49,11 +49,8 @@
      <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
       View Village on Google Maps
     </a>
-
-	  social media  
-	FACEBOOK,insta,x,youtube
 	  <a href="https://www.facebook.com/profile.php?id=100064362655112"target="_blank">
-       
+       FACEBOOK
 	  </a>
   </p>
   </section>
