--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
 	  <a href="https://www.facebook.com/profile.php?id=100064362655112"target="_blank">
        FACEBOOK
 	  </a>
+	  <!-- Font Awesome for Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<style>
+  .facebook-icon {
+    font-size: 40px;
+    color: #1877f2;
+    text-decoration: none;
+  }
+  .facebook-icon:hover {
+    color: #0d5ddb;
+  }
+</style>
+
+<!-- Facebook Icon Link -->
+<a href="https://www.facebook.com/YourPageName" target="_blank" class="facebook-icon">
+  <i class="fab fa-facebook"></i>
+</a>
   </p>
   </section>
 <section style="background-color: #fdf6f0; padding: 40px; border-radius: 10px; max-width: 700px; margin: 0 auto; font-family: 'Segoe UI', sans-serif; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
