--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
      <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
       View Village on Google Maps
     </a>
-	  <a href="https://www.facebook.com/profile.php?id=100064362655112"target="_blank">
-       FACEBOOK
+    
 	  </a>
 	  <!-- Font Awesome for Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -66,7 +65,7 @@
 </style>
 	  
 <!-- Facebook Icon Link -->
-<a href="https://www.facebook.com/YourPageName" target="_blank" class="facebook-icon">
+<a href="https://www.facebook.com/profile.php?id=100064362655112" target="_blank" class="facebook-icon">
   <i class="fab fa-facebook"></i>
 </a>
   </p>
