--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="#about">About</a>
       <a href="#events">Events</a>
       <a href="#contact">Contact</a>
+      <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
     </nav>
   </header>
 
