--- a/jobs.html
+++ b/jobs.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jobs - Manakovvali</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .active-btn {
-      background-color: green;
-      color: white;
-    }
-    .job-card {
-      border-left: 5px solid green;
-      margin-bottom: 15px;
-      background: #f8fff8;
-      padding: 15px;
-      border-radius: 5px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Jobs - Manakovvali</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+  .active-btn { background-color: green; color: white; }
+  .job-card { border-left: 5px solid green; margin-bottom: 15px; background: #f8fff8; padding: 15px; border-radius: 5px; }
+</style>
 </head>
 <body>
 
@@ -25,12 +16,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Manakovvali</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-      data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
-      aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
@@ -70,58 +56,68 @@
 </div>
 
 <script>
-  let jobs = [];
+const scriptURL = "https://script.google.com/macros/s/AKfycbzMlbggDTdSPqbX4kEgO-gBg507Kkfi0RlbozkLWUdQGyHzIBxXYn5KAs0ZFKL9l4TU6Q/exec"; // Replace with your Google Apps Script URL
 
-  function showPostJob() {
-    document.getElementById('postJobSection').style.display = 'block';
-    document.getElementById('lookJobSection').style.display = 'none';
-    document.getElementById('postJobBtn').classList.add('active-btn');
-    document.getElementById('lookJobBtn').classList.remove('active-btn');
+function showPostJob() {
+  document.getElementById('postJobSection').style.display = 'block';
+  document.getElementById('lookJobSection').style.display = 'none';
+  document.getElementById('postJobBtn').classList.add('active-btn');
+  document.getElementById('lookJobBtn').classList.remove('active-btn');
+}
+
+function showLookJob() {
+  document.getElementById('postJobSection').style.display = 'none';
+  document.getElementById('lookJobSection').style.display = 'block';
+  document.getElementById('lookJobBtn').classList.add('active-btn');
+  document.getElementById('postJobBtn').classList.remove('active-btn');
+  displayJobs();
+}
+
+async function addJob() {
+  let title = document.getElementById('jobTitle').value.trim();
+  let desc = document.getElementById('jobDesc').value.trim();
+  let contact = document.getElementById('jobContact').value.trim();
+
+  if (title && desc && contact) {
+    await fetch(scriptURL, {
+      method: 'POST',
+      mode: 'no-cors',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ title, desc, contact })
+    });
+    alert("Job Posted Successfully!");
+    document.getElementById('jobTitle').value = '';
+    document.getElementById('jobDesc').value = '';
+    document.getElementById('jobContact').value = '';
+  } else {
+    alert("Please fill all fields!");
   }
+}
 
-  function showLookJob() {
-    document.getElementById('postJobSection').style.display = 'none';
-    document.getElementById('lookJobSection').style.display = 'block';
-    document.getElementById('lookJobBtn').classList.add('active-btn');
-    document.getElementById('postJobBtn').classList.remove('active-btn');
-    displayJobs();
+async function displayJobs() {
+  let container = document.getElementById('jobsContainer');
+  container.innerHTML = '<p>Loading jobs...</p>';
+  let res = await fetch(scriptURL);
+  let jobs = await res.json();
+  container.innerHTML = '';
+  if (jobs.length === 0) {
+    container.innerHTML = '<p>No jobs available right now.</p>';
+  } else {
+    jobs.reverse().forEach(job => {
+      container.innerHTML += `
+        <div class="job-card">
+          <h5>${job.title}</h5>
+          <p>${job.desc}</p>
+          <p><b>Contact:</b> ${job.contact}</p>
+        </div>
+      `;
+    });
   }
+}
 
-  function addJob() {
-    let title = document.getElementById('jobTitle').value.trim();
-    let desc = document.getElementById('jobDesc').value.trim();
-    let contact = document.getElementById('jobContact').value.trim();
-
-    if(title && desc && contact){
-      jobs.push({title, desc, contact});
-      document.getElementById('jobTitle').value = '';
-      document.getElementById('jobDesc').value = '';
-      document.getElementById('jobContact').value = '';
-      alert("Job Posted Successfully!");
-    } else {
-      alert("Please fill all fields!");
-    }
-  }
-
-  function displayJobs() {
-    let container = document.getElementById('jobsContainer');
-    container.innerHTML = '';
-    if(jobs.length === 0){
-      container.innerHTML = '<p>No jobs available right now.</p>';
-    } else {
-      jobs.forEach(job => {
-        container.innerHTML += `
-          <div class="job-card">
-            <h5>${job.title}</h5>
-            <p>${job.desc}</p>
-            <p><b>Contact:</b> ${job.contact}</p>
-          </div>
-        `;
-      });
-    }
-  }
+document.addEventListener('DOMContentLoaded', displayJobs);
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
