--- a/jobs.html
+++ b/jobs.html
@@ -56,7 +56,7 @@
 </div>
 
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbxkPzcF8AN92FENxWX5f_djVdhqJm6dyr1z-fI1F7GB-qMGs8GwXCci1Sk4IWA0Hp1kQw/exec"; // Replace with your Google Apps Script URL
+const scriptURL = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLh8yB3YAuuSONUcWpS1qvdb_QDzxfTGxVl9jFD0k-0847-c-e8FJC9KN6FQ-pfdbt9bOH_vcFRXggC8JIjU3AJ64xF0LdQ4IAbKCMgwXnl686uQKPNwlSRYpVr08lAUjuibqrtEndss8EYeHbI19Z1pQPsRTP0wxyxI2wY8NqWUtx7Y-v1X1paAP2W9J9HR8YqvQwk5IY9WiHjmafpc_cxRIEvf9PuJL6oeUiVvgQaErjSMymKGSj3iJvHxcvf0KPexcwsuPn5ueRvrG3k4EUxO-f8TRdfb-kaW5Ej8&lib=M3C7A_t-lJYtyDEUiz-yu5_BXR0lQSv8S"; // Replace with your Google Apps Script URL
 
 function showPostJob() {
   document.getElementById('postJobSection').style.display = 'block';
