--- a/jobs.html
+++ b/jobs.html
@@ -49,14 +49,24 @@
   </div>
 
   <!-- Look for Job Section -->
-  <div class="mt-4" id="lookJobSection" style="display:none;">
-    <h4>Available Jobs</h4>
-    <div id="jobsContainer"></div>
-  </div>
+<!-- Look for Job Section -->
+<div class="mt-4" id="lookJobSection" style="display:none;">
+  <h4>Available Jobs</h4>
+  
+  <!-- Search Box -->
+  <input type="text" id="jobSearch" class="form-control mb-3" placeholder="Search for jobs...">
+
+  <div id="jobsContainer"></div>
+</div>
 </div>
 
+
+
 <script>
-const scriptURL = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLh8yB3YAuuSONUcWpS1qvdb_QDzxfTGxVl9jFD0k-0847-c-e8FJC9KN6FQ-pfdbt9bOH_vcFRXggC8JIjU3AJ64xF0LdQ4IAbKCMgwXnl686uQKPNwlSRYpVr08lAUjuibqrtEndss8EYeHbI19Z1pQPsRTP0wxyxI2wY8NqWUtx7Y-v1X1paAP2W9J9HR8YqvQwk5IY9WiHjmafpc_cxRIEvf9PuJL6oeUiVvgQaErjSMymKGSj3iJvHxcvf0KPexcwsuPn5ueRvrG3k4EUxO-f8TRdfb-kaW5Ej8&lib=M3C7A_t-lJYtyDEUiz-yu5_BXR0lQSv8S"; // Replace with your Google Apps Script URL
+
+let allJobs = []; // store jobs here
+
+const scriptURL = "https://script.google.com/macros/s/AKfycbxkPzcF8AN92FENxWX5f_djVdhqJm6dyr1z-fI1F7GB-qMGs8GwXCci1Sk4IWA0Hp1kQw/exec"; // Replace with your Google Apps Script URL
 
 function showPostJob() {
   document.getElementById('postJobSection').style.display = 'block';
@@ -93,17 +103,34 @@ async function addJob() {
     alert("Please fill all fields!");
   }
 }
-
-async function displayJobs() {
+async function displayJobs(filterText = "") {
   let container = document.getElementById('jobsContainer');
   container.innerHTML = '<p>Loading jobs...</p>';
-  let res = await fetch(scriptURL);
-  let jobs = await res.json();
+
+  try {
+    let res = await fetch(scriptURL);
+    allJobs = await res.json();
+    showFilteredJobs(filterText);
+  } catch (error) {
+    container.innerHTML = '<p>Error loading jobs.</p>';
+    console.error(error);
+  }
+}
+
+function showFilteredJobs(filterText) {
+  let container = document.getElementById('jobsContainer');
   container.innerHTML = '';
-  if (jobs.length === 0) {
-    container.innerHTML = '<p>No jobs available right now.</p>';
+
+  let filteredJobs = allJobs.filter(job => 
+    job.title.toLowerCase().includes(filterText.toLowerCase()) ||
+    job.desc.toLowerCase().includes(filterText.toLowerCase()) ||
+    job.contact.toLowerCase().includes(filterText.toLowerCase())
+  );
+
+  if (filteredJobs.length === 0) {
+    container.innerHTML = '<p>No jobs found.</p>';
   } else {
-    jobs.reverse().forEach(job => {
+    filteredJobs.reverse().forEach(job => {
       container.innerHTML += `
         <div class="job-card">
           <h5>${job.title}</h5>
@@ -115,7 +142,14 @@ async function displayJobs() {
   }
 }
 
-document.addEventListener('DOMContentLoaded', displayJobs);
+// Search Event Listener
+document.addEventListener('DOMContentLoaded', () => {
+  document.getElementById('jobSearch').addEventListener('input', (e) => {
+    showFilteredJobs(e.target.value);
+  });
+});
+</script>
+
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
