--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ManaKovvali</title>
+  <title>manakovvali</title>
   
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +15,7 @@
       <a href="#about">About</a>
       <a href="#events">Events</a>
       <a href="#contact">Contact</a>
-      <a href="jobs.html">Jobs</a>
+	  <a href="#gallery">GALLERY</a>
     </nav>
   </header>
 
@@ -28,6 +28,12 @@
     <h2>About Our Village</h2>
     <p>
       Our village is located in the heart of the countryside. It is known for its lush green fields, traditional festivals, and warm hospitality. With a history dating back several centuries, we take pride in preserving our cultural heritage while embracing progress.
+    </p>
+  </section>
+  <section id="gallery">
+    <h2>explore the green beauty of manakovvali</h2>
+    <p>
+      GET READY
     </p>
   </section>
 
@@ -47,16 +53,39 @@
     Phone: +91-8688493236<br>
     Email: manakovvali@gmail.com</p>
 	
-     <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank">
-      View Village on Google Maps
-    </a>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Google Maps Icon</title>
+  <!-- Font Awesome CDN for the map icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    .map-icon {
+      font-size: 30px;
+      color: #4285F4; /* Google Maps blue */
+      text-decoration: none;
+    }
+    .map-icon:hover {
+      color: #0b66c3;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Google Maps icon that links to a location -->
+  <a href="https://www.google.com/maps/search/?api=1&query=Kovvali,+Andhra+Pradesh" target="_blank" class="map-icon">
+    <i class="fas fa-map-marker-alt"></i>
+  </a>
+
+</body>
+</html>
     
 	  </a>
 	  <!-- Font Awesome for Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
   .facebook-icon {
-    font-size: 40px;
+    font-size: 30px;
     color: #1877f2;
     text-decoration: none;
   }
@@ -71,9 +100,9 @@
 </a>
   </p>
   </section>
-<section style="background-color: #fdf6f0; padding: 40px; border-radius: 10px; max-width: 700px; margin: 0 auto; font-family: 'Segoe UI', sans-serif; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-    <h2 style="color: #cc4e00; text-align: center;">My Heartfelt Note</h2>
-    <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center; padding: 0 20px;">
+<section class=my-notes>
+    <h2 class=my-noteheader> My Heartfelt Note</h2>
+    <p class=my-notesbody>
         “This website is born from love — a small gift to the village that shaped who I am. 
         With the little knowledge and experience I’ve gathered, I hope to preserve our roots, 
         connect our people, and help our community grow stronger, together. 
