--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <a href="#about">About</a>
       <a href="#events">Events</a>
       <a href="#contact">Contact</a>
-	  <a href="#gallery">GALLERY</a>
+	<a href="jobs.html">Jobs</a>
+	    <a href="#gallery">Gallery</a>
     </nav>
   </header>
 
