--- a/jobs.html
+++ b/jobs.html
@@ -1,23 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jobs - Manakovvali</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  .active-btn { background-color: green; color: white; }
-  .job-card { border-left: 5px solid green; margin-bottom: 15px; background: #f8fff8; padding: 15px; border-radius: 5px; }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Jobs - Mana Kovvali</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Font Awesome for icons -->
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    rel="stylesheet"
+  />
+
+  <!-- Custom Styles -->
+  <style>
+    body {
+      background-color: #f8fafc;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #333;
+    }
+    .navbar {
+      background-color: #004d40 !important;
+    }
+    .navbar-brand,
+    .nav-link {
+      color: #a7ffeb !important;
+      font-weight: 600;
+    }
+    .nav-link.active {
+      background-color: #26a69a !important;
+      border-radius: 5px;
+    }
+    .container {
+      max-width: 900px;
+      margin-top: 40px;
+      margin-bottom: 60px;
+    }
+    h2 {
+      color: #004d40;
+      font-weight: 700;
+      margin-bottom: 25px;
+      text-align: center;
+      border-bottom: 3px solid #26a69a;
+      padding-bottom: 8px;
+    }
+    /* Toggle Buttons */
+    .btn-toggle {
+      min-width: 140px;
+      font-weight: 600;
+      border-radius: 30px;
+      padding: 10px 20px;
+      transition: all 0.3s ease;
+    }
+    .btn-toggle.active {
+      background-color: #26a69a;
+      color: white;
+      border: none;
+    }
+    .btn-toggle:not(.active) {
+      background-color: transparent;
+      color: #26a69a;
+      border: 2px solid #26a69a;
+    }
+    .btn-toggle:not(.active):hover {
+      background-color: #26a69a;
+      color: white;
+    }
+    /* Card for Post Job form */
+    .card {
+      border-left: 5px solid #26a69a;
+      background: #f0fdfa;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 6px 15px rgb(38 166 154 / 0.1);
+    }
+    /* Input fields */
+    input[type="text"],
+    textarea {
+      border: 2px solid #26a69a;
+      border-radius: 8px;
+      padding: 10px;
+      font-size: 1rem;
+      resize: vertical;
+      transition: border-color 0.3s ease;
+    }
+    input[type="text"]:focus,
+    textarea:focus {
+      border-color: #004d40;
+      outline: none;
+    }
+    /* Job cards in job list */
+    .job-card {
+      border-left: 5px solid #26a69a;
+      background: #f8fff8;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgb(38 166 154 / 0.1);
+    }
+    .job-card h5 {
+      color: #004d40;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+    .job-card p {
+      margin-bottom: 5px;
+      color: #444;
+    }
+    /* Search input */
+    #jobSearch {
+      border: 2px solid #26a69a;
+      border-radius: 30px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      margin-bottom: 25px;
+      transition: border-color 0.3s ease;
+    }
+    #jobSearch:focus {
+      border-color: #004d40;
+      outline: none;
+    }
+    /* Responsive adjustments */
+    @media (max-width: 576px) {
+      .btn-toggle {
+        min-width: 100px;
+        padding: 8px 14px;
+      }
+      .container {
+        margin-top: 20px;
+        margin-bottom: 40px;
+        padding: 0 15px;
+      }
+    }
+  </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Manakovvali</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ms-auto">
+    <a class="navbar-brand" href="index.html">Mana Kovvali</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav gap-2">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
         <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
@@ -27,131 +157,144 @@
   </div>
 </nav>
 
-<!-- Title -->
-<div class="container mt-4">
-  <h2 class="text-center text-success">Let us grow and let the community grow</h2>
+<!-- Main container -->
+<div class="container">
+  <h2>Let us grow and let the community grow</h2>
 
   <!-- Toggle Buttons -->
-  <div class="text-center mt-3">
-    <button id="postJobBtn" class="btn active-btn" onclick="showPostJob()">Post a Job</button>
-    <button id="lookJobBtn" class="btn btn-outline-success" onclick="showLookJob()">Look for a Job</button>
+  <div class="d-flex justify-content-center gap-3 mb-4">
+    <button id="postJobBtn" class="btn btn-toggle active" aria-pressed="true" onclick="showPostJob()">Post a Job</button>
+    <button id="lookJobBtn" class="btn btn-toggle" aria-pressed="false" onclick="showLookJob()">Look for a Job</button>
   </div>
 
   <!-- Post Job Form -->
-  <div class="mt-4" id="postJobSection">
-    <div class="card p-3">
-      <h4>Post a Job</h4>
-      <input type="text" id="jobTitle" placeholder="Job Title" class="form-control mb-2">
-      <textarea id="jobDesc" placeholder="Job Description" class="form-control mb-2"></textarea>
-      <input type="text" id="jobContact" placeholder="Contact Details" class="form-control mb-2">
+  <div id="postJobSection">
+    <div class="card">
+      <h4 class="mb-4 text-success">Post a Job</h4>
+      <input type="text" id="jobTitle" placeholder="Job Title" class="form-control mb-3" />
+      <textarea id="jobDesc" placeholder="Job Description" rows="4" class="form-control mb-3"></textarea>
+      <input type="text" id="jobContact" placeholder="Contact Details" class="form-control mb-3" />
       <button class="btn btn-success" onclick="addJob()">Add Job</button>
     </div>
   </div>
 
   <!-- Look for Job Section -->
-<!-- Look for Job Section -->
-<div class="mt-4" id="lookJobSection" style="display:none;">
-  <h4>Available Jobs</h4>
-  
-  <!-- Search Box -->
-  <input type="text" id="jobSearch" class="form-control mb-3" placeholder="Search for jobs...">
-
-  <div id="jobsContainer"></div>
+  <div id="lookJobSection" style="display:none;">
+    <h4 class="mb-4 text-success">Available Jobs</h4>
+    <input
+      type="text"
+      id="jobSearch"
+      class="form-control"
+      placeholder="Search for jobs..."
+      aria-label="Search jobs"
+    />
+    <div id="jobsContainer" class="mt-4"></div>
+  </div>
 </div>
-</div>
 
-
-
+<!-- Scripts -->
 <script>
+  let allJobs = []; // Store jobs
 
-let allJobs = []; // store jobs here
+  const scriptURL = "https://script.google.com/macros/s/AKfycbxkPzcF8AN92FENxWX5f_djVdhqJm6dyr1z-fI1F7GB-qMGs8GwXCci1Sk4IWA0Hp1kQw/exec";
 
-const scriptURL = "https://script.google.com/macros/s/AKfycbxkPzcF8AN92FENxWX5f_djVdhqJm6dyr1z-fI1F7GB-qMGs8GwXCci1Sk4IWA0Hp1kQw/exec"; // Replace with your Google Apps Script URL
+  function showPostJob() {
+    document.getElementById('postJobSection').style.display = 'block';
+    document.getElementById('lookJobSection').style.display = 'none';
+    toggleActiveButton('postJobBtn', 'lookJobBtn');
+  }
 
-function showPostJob() {
-  document.getElementById('postJobSection').style.display = 'block';
-  document.getElementById('lookJobSection').style.display = 'none';
-  document.getElementById('postJobBtn').classList.add('active-btn');
-  document.getElementById('lookJobBtn').classList.remove('active-btn');
-}
+  function showLookJob() {
+    document.getElementById('postJobSection').style.display = 'none';
+    document.getElementById('lookJobSection').style.display = 'block';
+    toggleActiveButton('lookJobBtn', 'postJobBtn');
+    displayJobs();
+  }
 
-function showLookJob() {
-  document.getElementById('postJobSection').style.display = 'none';
-  document.getElementById('lookJobSection').style.display = 'block';
-  document.getElementById('lookJobBtn').classList.add('active-btn');
-  document.getElementById('postJobBtn').classList.remove('active-btn');
-  displayJobs();
-}
+  function toggleActiveButton(activeId, inactiveId) {
+    const activeBtn = document.getElementById(activeId);
+    const inactiveBtn = document.getElementById(inactiveId);
+    activeBtn.classList.add('active');
+    activeBtn.setAttribute('aria-pressed', 'true');
+    inactiveBtn.classList.remove('active');
+    inactiveBtn.setAttribute('aria-pressed', 'false');
+  }
 
-async function addJob() {
-  let title = document.getElementById('jobTitle').value.trim();
-  let desc = document.getElementById('jobDesc').value.trim();
-  let contact = document.getElementById('jobContact').value.trim();
+  async function addJob() {
+    const title = document.getElementById('jobTitle').value.trim();
+    const desc = document.getElementById('jobDesc').value.trim();
+    const contact = document.getElementById('jobContact').value.trim();
 
-  if (title && desc && contact) {
-    await fetch(scriptURL, {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ title, desc, contact })
+    if (!title || !desc || !contact) {
+      alert("Please fill all fields!");
+      return;
+    }
+
+    try {
+      await fetch(scriptURL, {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ title, desc, contact })
+      });
+      alert("Job Posted Successfully!");
+      document.getElementById('jobTitle').value = '';
+      document.getElementById('jobDesc').value = '';
+      document.getElementById('jobContact').value = '';
+    } catch (error) {
+      alert("Error posting job. Please try again later.");
+      console.error(error);
+    }
+  }
+
+  async function displayJobs(filterText = "") {
+    const container = document.getElementById('jobsContainer');
+    container.innerHTML = '<p>Loading jobs...</p>';
+
+    try {
+      const res = await fetch(scriptURL);
+      allJobs = await res.json();
+      showFilteredJobs(filterText);
+    } catch (error) {
+      container.innerHTML = '<p>Error loading jobs.</p>';
+      console.error(error);
+    }
+  }
+
+  function showFilteredJobs(filterText) {
+    const container = document.getElementById('jobsContainer');
+    container.innerHTML = '';
+
+    const filteredJobs = allJobs.filter(job =>
+      job.title.toLowerCase().includes(filterText.toLowerCase()) ||
+      job.desc.toLowerCase().includes(filterText.toLowerCase()) ||
+      job.contact.toLowerCase().includes(filterText.toLowerCase())
+    );
+
+    if (filteredJobs.length === 0) {
+      container.innerHTML = '<p>No jobs found.</p>';
+    } else {
+      filteredJobs.reverse().forEach(job => {
+        container.innerHTML += `
+          <div class="job-card" tabindex="0" role="article" aria-label="Job posting for ${job.title}">
+            <h5>${job.title}</h5>
+            <p>${job.desc}</p>
+            <p><strong>Contact:</strong> ${job.contact}</p>
+          </div>
+        `;
+      });
+    }
+  }
+
+  // Search input event listener
+  document.addEventListener('DOMContentLoaded', () => {
+    document.getElementById('jobSearch').addEventListener('input', (e) => {
+      showFilteredJobs(e.target.value);
     });
-    alert("Job Posted Successfully!");
-    document.getElementById('jobTitle').value = '';
-    document.getElementById('jobDesc').value = '';
-    document.getElementById('jobContact').value = '';
-  } else {
-    alert("Please fill all fields!");
-  }
-}
-async function displayJobs(filterText = "") {
-  let container = document.getElementById('jobsContainer');
-  container.innerHTML = '<p>Loading jobs...</p>';
-
-  try {
-    let res = await fetch(scriptURL);
-    allJobs = await res.json();
-    showFilteredJobs(filterText);
-  } catch (error) {
-    container.innerHTML = '<p>Error loading jobs.</p>';
-    console.error(error);
-  }
-}
-
-function showFilteredJobs(filterText) {
-  let container = document.getElementById('jobsContainer');
-  container.innerHTML = '';
-
-  let filteredJobs = allJobs.filter(job => 
-    job.title.toLowerCase().includes(filterText.toLowerCase()) ||
-    job.desc.toLowerCase().includes(filterText.toLowerCase()) ||
-    job.contact.toLowerCase().includes(filterText.toLowerCase())
-  );
-
-  if (filteredJobs.length === 0) {
-    container.innerHTML = '<p>No jobs found.</p>';
-  } else {
-    filteredJobs.reverse().forEach(job => {
-      container.innerHTML += `
-        <div class="job-card">
-          <h5>${job.title}</h5>
-          <p>${job.desc}</p>
-          <p><b>Contact:</b> ${job.contact}</p>
-        </div>
-      `;
-    });
-  }
-}
-
-// Search Event Listener
-document.addEventListener('DOMContentLoaded', () => {
-  document.getElementById('jobSearch').addEventListener('input', (e) => {
-    showFilteredJobs(e.target.value);
   });
-});
 </script>
 
-</script>
-
+<!-- Bootstrap JS Bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
