--- a/jobs.html
+++ b/jobs.html
@@ -8,24 +8,18 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Font Awesome for icons -->
-  <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    rel="stylesheet"
-  />
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
 
-  <!-- Custom Styles -->
   <style>
     body {
       background-color: #f8fafc;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #333;
     }
     .navbar {
       background-color: #004d40 !important;
     }
-    .navbar-brand,
-    .nav-link {
+    .navbar-brand, .nav-link {
       color: #a7ffeb !important;
       font-weight: 600;
     }
@@ -46,52 +40,16 @@
       border-bottom: 3px solid #26a69a;
       padding-bottom: 8px;
     }
-    /* Toggle Buttons */
-    .btn-toggle {
-      min-width: 140px;
-      font-weight: 600;
+    #jobSearch {
+      border: 2px solid #26a69a;
       border-radius: 30px;
       padding: 10px 20px;
-      transition: all 0.3s ease;
+      margin-bottom: 25px;
     }
-    .btn-toggle.active {
-      background-color: #26a69a;
-      color: white;
-      border: none;
-    }
-    .btn-toggle:not(.active) {
-      background-color: transparent;
-      color: #26a69a;
-      border: 2px solid #26a69a;
-    }
-    .btn-toggle:not(.active):hover {
-      background-color: #26a69a;
-      color: white;
-    }
-    /* Card for Post Job form */
-    .card {
-      border-left: 5px solid #26a69a;
-      background: #f0fdfa;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 6px 15px rgb(38 166 154 / 0.1);
-    }
-    /* Input fields */
-    input[type="text"],
-    textarea {
-      border: 2px solid #26a69a;
-      border-radius: 8px;
-      padding: 10px;
-      font-size: 1rem;
-      resize: vertical;
-      transition: border-color 0.3s ease;
-    }
-    input[type="text"]:focus,
-    textarea:focus {
+    #jobSearch:focus {
       border-color: #004d40;
       outline: none;
     }
-    /* Job cards in job list */
     .job-card {
       border-left: 5px solid #26a69a;
       background: #f8fff8;
@@ -104,35 +62,6 @@
       color: #004d40;
       font-weight: 700;
       margin-bottom: 10px;
-    }
-    .job-card p {
-      margin-bottom: 5px;
-      color: #444;
-    }
-    /* Search input */
-    #jobSearch {
-      border: 2px solid #26a69a;
-      border-radius: 30px;
-      padding: 10px 20px;
-      font-size: 1rem;
-      margin-bottom: 25px;
-      transition: border-color 0.3s ease;
-    }
-    #jobSearch:focus {
-      border-color: #004d40;
-      outline: none;
-    }
-    /* Responsive adjustments */
-    @media (max-width: 576px) {
-      .btn-toggle {
-        min-width: 100px;
-        padding: 8px 14px;
-      }
-      .container {
-        margin-top: 20px;
-        margin-bottom: 40px;
-        padding: 0 15px;
-      }
     }
   </style>
 </head>
@@ -161,64 +90,44 @@
 <div class="container">
   <h2>Let us grow and let the community grow</h2>
 
-  <!-- Toggle Buttons -->
-  <div class="d-flex justify-content-center gap-3 mb-4">
-    <button id="postJobBtn" class="btn btn-toggle active" aria-pressed="true" onclick="showPostJob()">Post a Job</button>
-    <button id="lookJobBtn" class="btn btn-toggle" aria-pressed="false" onclick="showLookJob()">Look for a Job</button>
+  <!-- Post Job Button -->
+  <div class="text-end mb-4">
+    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#postJobModal">
+      <i class="fas fa-plus"></i> Post a Job
+    </button>
   </div>
 
-  <!-- Post Job Form -->
-  <div id="postJobSection">
-    <div class="card">
-      <h4 class="mb-4 text-success">Post a Job</h4>
-      <input type="text" id="jobTitle" placeholder="Job Title" class="form-control mb-3" />
-      <textarea id="jobDesc" placeholder="Job Description" rows="4" class="form-control mb-3"></textarea>
-      <input type="text" id="jobContact" placeholder="Contact Details" class="form-control mb-3" />
-      <button class="btn btn-success" onclick="addJob()">Add Job</button>
+  <!-- Search Jobs -->
+  <input type="text" id="jobSearch" class="form-control" placeholder="Search for jobs..." />
+
+  <!-- Jobs List -->
+  <div id="jobsContainer" class="mt-4"></div>
+</div>
+
+<!-- Post Job Modal -->
+<div class="modal fade" id="postJobModal" tabindex="-1" aria-labelledby="postJobModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-success text-white">
+        <h5 class="modal-title" id="postJobModalLabel">Post a Job</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <input type="text" id="jobTitle" placeholder="Job Title" class="form-control mb-3" />
+        <textarea id="jobDesc" placeholder="Job Description" rows="3" class="form-control mb-3"></textarea>
+        <input type="text" id="jobContact" placeholder="Contact Details" class="form-control mb-3" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-success" onclick="addJob()" data-bs-dismiss="modal">Add Job</button>
+      </div>
     </div>
-  </div>
-
-  <!-- Look for Job Section -->
-  <div id="lookJobSection" style="display:none;">
-    <h4 class="mb-4 text-success">Available Jobs</h4>
-    <input
-      type="text"
-      id="jobSearch"
-      class="form-control"
-      placeholder="Search for jobs..."
-      aria-label="Search jobs"
-    />
-    <div id="jobsContainer" class="mt-4"></div>
   </div>
 </div>
 
-<!-- Scripts -->
 <script>
-  let allJobs = []; // Store jobs
-
+  let allJobs = [];
   const scriptURL = "https://script.google.com/macros/s/AKfycbxkPzcF8AN92FENxWX5f_djVdhqJm6dyr1z-fI1F7GB-qMGs8GwXCci1Sk4IWA0Hp1kQw/exec";
-
-  function showPostJob() {
-    document.getElementById('postJobSection').style.display = 'block';
-    document.getElementById('lookJobSection').style.display = 'none';
-    toggleActiveButton('postJobBtn', 'lookJobBtn');
-  }
-
-  function showLookJob() {
-    document.getElementById('postJobSection').style.display = 'none';
-    document.getElementById('lookJobSection').style.display = 'block';
-    toggleActiveButton('lookJobBtn', 'postJobBtn');
-    displayJobs();
-  }
-
-  function toggleActiveButton(activeId, inactiveId) {
-    const activeBtn = document.getElementById(activeId);
-    const inactiveBtn = document.getElementById(inactiveId);
-    activeBtn.classList.add('active');
-    activeBtn.setAttribute('aria-pressed', 'true');
-    inactiveBtn.classList.remove('active');
-    inactiveBtn.setAttribute('aria-pressed', 'false');
-  }
 
   async function addJob() {
     const title = document.getElementById('jobTitle').value.trim();
@@ -241,6 +150,7 @@
       document.getElementById('jobTitle').value = '';
       document.getElementById('jobDesc').value = '';
       document.getElementById('jobContact').value = '';
+      displayJobs();
     } catch (error) {
       alert("Error posting job. Please try again later.");
       console.error(error);
@@ -276,7 +186,7 @@
     } else {
       filteredJobs.reverse().forEach(job => {
         container.innerHTML += `
-          <div class="job-card" tabindex="0" role="article" aria-label="Job posting for ${job.title}">
+          <div class="job-card">
             <h5>${job.title}</h5>
             <p>${job.desc}</p>
             <p><strong>Contact:</strong> ${job.contact}</p>
@@ -286,15 +196,14 @@
     }
   }
 
-  // Search input event listener
   document.addEventListener('DOMContentLoaded', () => {
-    document.getElementById('jobSearch').addEventListener('input', (e) => {
+    displayJobs();
+    document.getElementById('jobSearch').addEventListener('input', e => {
       showFilteredJobs(e.target.value);
     });
   });
 </script>
 
-<!-- Bootstrap JS Bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
