--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <header>
     <div class="container header-container">
-      <img src="logo.png" alt="Mana Kovvali Logo" class="site-logo" />
-      <h1>Welcome to Mana Kovvali</h1>
+
+      <h1><img src="logo.png" alt="Mana Kovvali Logo" class="site-logo" />  Welcome to Mana Kovvali</h1>
       <nav id="navbar">
         <a href="#about">About</a>
         <a href="#events">Events</a>
@@ -25,10 +25,10 @@
     </div>
   </header>
 
-  <section id="hero" class="container hero-section">
-    <h2>Experience the Beauty of Our Village</h2>
-    <p>Rich culture, friendly people, and beautiful landscapes.</p>
-  </section>
+<section id="hero">
+  <h2>Experience the Beauty of Our Village</h2>
+  <p>Rich culture, friendly people, and beautiful landscapes.</p>
+</section>
 
   <section id="about" class="container section">
     <h2>About Our Village</h2>
@@ -36,16 +36,17 @@
       Our village is located in the heart of the countryside. It is known for its lush green fields, traditional festivals, and warm hospitality. With a history dating back several centuries, we take pride in preserving our cultural heritage while embracing progress.
     </p>
   </section>
+<!-- Gallery Section -->
+
 
   <section id="gallery" class="container section">
-    <h2>Explore the Green Beauty of Mana Kovvali</h2>
-    <p>Get ready!</p>
+    <h2>Explore the Green Beauty</h2>
+    <p></p>
 
     <div class="slider-container">
       <div class="slides" id="slides">
         <div class="slide"><img src="1.jpg" alt="Image 1" /></div>
         <div class="slide"><img src="2.jpg" alt="Image 2" /></div>
-        <div class="slide"><img src="3.jpg" alt="Image 3" /></div>
       </div>
 
       <div class="navigation">
@@ -83,15 +84,16 @@
     </div>
   </section>
 
-  <section class="container my-notes">
-    <h2 class="my-noteheader">My Heartfelt Note</h2>
-    <p class="my-notesbody">
-      “This website is born from love — a small gift to the village that shaped who I am.
-      With the little knowledge and experience I’ve gathered, I hope to preserve our roots,
-      connect our people, and help our community grow stronger, together.
-      <strong>This is for Kovvali — my home, my pride.</strong>”
-    </p>
-  </section>
+<section class="my-notes">
+  <h2 class="my-noteheader">My Heartfelt Note</h2>
+  <p class="my-notesbody">
+    “This website is born from love — a small gift to the village that shaped who I am.
+    With the little knowledge and experience I’ve gathered, I hope to preserve our roots,
+    connect our people, and help our community grow stronger, together.
+    <strong>This is for Kovvali — my home, my pride.</strong>”
+  </p>
+</section>
+
 
   <footer>
     <p>&copy; 2025 Mana Kovvali. All rights reserved.</p>
