--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>Rich culture, friendly people, and beautiful landscapes.</p>
 </section>
 
-  <section id="about" class="container section">
+  <section id="about" class="container section fade-section">
     <h2>About Our Village</h2>
     <p>
       Our village is located in the heart of the countryside. It is known for its lush green fields, traditional festivals, and warm hospitality. With a history dating back several centuries, we take pride in preserving our cultural heritage while embracing progress.
@@ -39,7 +39,7 @@
 <!-- Gallery Section -->
 
 
-  <section id="gallery" class="container section">
+  <section id="gallery" class="container section fade-section">
     <h2>Explore the Green Beauty</h2>
     <p></p>
 
@@ -56,7 +56,7 @@
     </div>
   </section>
 
-  <section id="events" class="container section">
+  <section id="events" class="container section fade-section">
     <h2>Upcoming Events</h2>
     <ul class="event-list">
       <li>
@@ -66,7 +66,7 @@
     </ul>
   </section>
 
-  <section id="contact" class="container section">
+  <section id="contact" class="container section fade-section">
     <h2>Contact Us</h2>
     <address>
       Village Office: VRO Office Main Road Kovvali Denduluru (MD), Eluru (DST), Andhra Pradesh (ST), India - 534442<br />
@@ -84,7 +84,7 @@
     </div>
   </section>
 
-<section class="my-notes">
+<section class="my-notes fade-section">
   <h2 class="my-noteheader">My Heartfelt Note</h2>
   <p class="my-notesbody">
     “This website is born from love — a small gift to the village that shaped who I am.
@@ -127,5 +127,22 @@
     // Auto slide every 5 seconds
     setInterval(() => nextSlide(), 5000);
   </script>
+<script>
+  const fadeSections = document.querySelectorAll('.fade-section');
+
+  function checkFade() {
+    const triggerBottom = window.innerHeight * 0.85;
+    fadeSections.forEach(section => {
+      const boxTop = section.getBoundingClientRect().top;
+      if (boxTop < triggerBottom) {
+        section.classList.add('visible');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', checkFade);
+  window.addEventListener('load', checkFade);
+</script>
+
 </body>
 </html>
