--- a/jobs.html
+++ b/jobs.html
@@ -87,11 +87,11 @@
 </nav>
 
 <!-- Main container -->
-<div class="container">
+<div class="container fade-section">
   <h2>Let us grow and let the community grow</h2>
 
   <!-- Post Job Button -->
-  <div class="text-end mb-4">
+  <div class="text-end mb-4 fade-section">
     <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#postJobModal">
       <i class="fas fa-plus"></i> Post a Job
     </button>
@@ -105,7 +105,7 @@
 </div>
 
 <!-- Post Job Modal -->
-<div class="modal fade" id="postJobModal" tabindex="-1" aria-labelledby="postJobModalLabel" aria-hidden="true">
+<div class="modal fade fade-section" id="postJobModal" tabindex="-1" aria-labelledby="postJobModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header bg-success text-white">
@@ -202,6 +202,22 @@
       showFilteredJobs(e.target.value);
     });
   });
+</script>
+<script>
+  const fadeSections = document.querySelectorAll('.fade-section');
+
+  function checkFade() {
+    const triggerBottom = window.innerHeight * 0.85;
+    fadeSections.forEach(section => {
+      const boxTop = section.getBoundingClientRect().top;
+      if (boxTop < triggerBottom) {
+        section.classList.add('visible');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', checkFade);
+  window.addEventListener('load', checkFade);
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
