--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container header-container">
 
-      <h1><img src="logo.png" alt="Mana Kovvali Logo" class="site-logo" />  Welcome to Mana Kovvali</h1>
+      <h1><img src="logo.png" alt="Mana Kovvali Logo" class="site-logo" /> Mana Kovvali</h1>
       <nav id="navbar">
         <a href="#about">About</a>
         <a href="#events">Events</a>
