--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       <nav id="navbar">
         <a href="#about">About</a>
         <a href="#events">Events</a>
-        <a href="#contact">Contact</a>
+
         <a href="jobs.html">Jobs</a>
         <a href="#gallery">Gallery</a>
+        <a href="schools.html">Schools</a>
+        <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
