--- a/jobs.html
+++ b/jobs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jobs - Mana Kovvali</title>
+  <title>JMana Kovvali</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -78,9 +78,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav gap-2">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-        <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+        <li class="nav-item"><a class="nav-link" href="Index.html#gallery">Gallery</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html#events">Events</a></li>
         <li class="nav-item"><a class="nav-link active" href="jobs.html">Jobs</a></li>
+        <li class="nav-item"><a class="nav-link" href="schools.html">Schools</a></li>
       </ul>
     </div>
   </div>
