--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </header>
 
 <section id="hero">
-  <h2>Experience the Beauty of Our Village</h2>
-  <p>Rich culture, friendly people, and beautiful landscapes.</p>
+  <h2>Uniting Our Community</h2>
+  <p>A connected community is a strong community. By bringing together ideas, efforts, and support from everyone, we create a space where every voice matters, every dream has value, and growth becomes a shared journey. Together, we can build a stronger future for all..</p>
 </section>
 
   <section id="about" class="container section fade-section">
