--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
   <p>A connected community is a strong community. By bringing together ideas, efforts, and support from everyone, we create a space where every voice matters, every dream has value, and growth becomes a shared journey. Together, we can build a stronger future for all..</p>
 </section>
 
+<!-- Events -->
+  <section id="events" class="container section fade-section">
+    <h2>Upcoming Events</h2>
+    <ul class="event-list">
+      <li>
+        <strong>Harvest Festival</strong> – September 10, 2025<br />
+        A day full of music, food, and traditional performances.
+      </li>
+    </ul>
+  </section>
+  <!-- About -->
   <section id="about" class="container section fade-section">
     <h2>About Our Village</h2>
     <p>
@@ -59,15 +70,7 @@
     </div>
   </section>
 
-  <section id="events" class="container section fade-section">
-    <h2>Upcoming Events</h2>
-    <ul class="event-list">
-      <li>
-        <strong>Harvest Festival</strong> – September 10, 2025<br />
-        A day full of music, food, and traditional performances.
-      </li>
-    </ul>
-  </section>
+
 
   <section id="contact" class="container section fade-section">
     <h2>Contact Us</h2>
