--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <section id="hero">
   <h2>Uniting Our Community</h2>
-  <p>A connected community is a strong community. By bringing together ideas, efforts, and support from everyone, we create a space where every voice matters, every dream has value, and growth becomes a shared journey. Together, we can build a stronger future for all..</p>
+  <p>A connected community grows stronger when everyone contributes. Together, we create a space where every voice matters and build a better future for all.</p>
 </section>
 
 <!-- Events -->
@@ -38,8 +38,8 @@
     <h2>Upcoming Events</h2>
     <ul class="event-list">
       <li>
-        <strong>Harvest Festival</strong> – September 10, 2025<br />
-        A day full of music, food, and traditional performances.
+        <strong>Logo COntest</strong> – Coming Soon<br />
+        
       </li>
     </ul>
   </section>
